--- a/website/scss/_footer.scss
+++ b/website/scss/_footer.scss
@@ -52,32 +52,33 @@ footer {
          }
       }
 
-      .footer-company {
-         height: 200px;
+   }
+   .footer-company {
+      height: 200px;
 
-         .footer-social-media {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr 1fr;
-            gap: 8px;
-            margin-top: 0;
-         }
+      .footer-social-media {
+         display: grid;
+         grid-template-columns: 1fr 1fr 1fr 1fr;
+         gap: 8px;
+         margin-top: 0;
+         max-width: 0px;
+      }
 
-         h4 {
-            text-transform: uppercase;
-            font-size: 1rem;
-            margin-bottom: 26px;
-            margin-top: 26px;
-            padding-top: 0;
-         }
+      h4 {
+         text-transform: uppercase;
+         font-size: 1rem;
+         margin-bottom: 26px;
+         margin-top: 26px;
+         padding-top: 0;
+      }
 
-         a {
-            color: #fff;
-            text-decoration: none;
-            background-color: $color-primary-dark;
-            display: block;
-            width: 64px;
-            height: 56px;
-         }
+      a {
+         color: #fff;
+         text-decoration: none;
+         background-color: $color-primary-dark;
+         display: block;
+         width: 64px;
+         height: 56px;
       }
    }
 }
